--- a/GitWatch/Base.lproj/Main.storyboard
+++ b/GitWatch/Base.lproj/Main.storyboard
@@ -1179,7 +1179,7 @@
                             <outlet property="delegate" destination="ybq-fC-gPw" id="WOv-t5-hHL"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="mK4-MF-X6h">
+                    <navigationItem key="navigationItem" title="Dashboard" id="mK4-MF-X6h">
                         <barButtonItem key="leftBarButtonItem" style="plain" systemItem="edit" id="VPM-Aa-BQ1">
                             <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
